--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "csv",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
