--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server":"json-server mock/db.json --port 3000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test --code-coverage=true"
   },
   "private": true,
   "dependencies": {
